--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.GigihAndroid" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.GigihAndroid" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <!-- Base application theme. -->
+    <style name="Base.Theme.GigihAndroid" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 </resources>
