--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".FirstFragment">
+    tools:context=".presentation.FirstFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -34,13 +34,13 @@
             android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next"
             android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:text="@string/next"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/textview_first"
+            android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -48,6 +48,74 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnRequestLocation" />
+
+        <TextView
+            android:id="@+id/tvShowActivityLifecycle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/show_activity_lifecycle"
+            app:layout_constraintBottom_toBottomOf="@id/switchActivity"
+            app:layout_constraintEnd_toStartOf="@id/switchActivity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/switchActivity" />
+
+        <TextView
+            android:id="@+id/tvShowFragmentLifecycle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/show_fragment_lifecycle"
+            app:layout_constraintBottom_toBottomOf="@id/switchFragment"
+            app:layout_constraintEnd_toStartOf="@id/switchFragment"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/switchFragment" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/switchActivity" />
+
+        <TextView
+            android:id="@+id/tvDataIntent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Data intent"
+            app:layout_constraintTop_toBottomOf="@id/switchFragment" />
+
+        <Button
+            android:id="@+id/btnImplicitIntent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/implicit_intent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tvDataIntent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnAddScheduledNotification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_scheduled_notification"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/btnImplicitIntent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnGoToCarousel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/go_to_carousel"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/btnAddScheduledNotification"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
